<resources>
    <string name="app_name">SmapCare</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="username">Username</string>
    <string name="judul_konten">Judul Konten</string>

    <string name="rumah_sakit">Rumah Sakit</string>
    <string name="puskesmas">Puskesmas</string>
    <string name="klinik">Klinik</string>
    <string name="lainnya">Lainnya</string>
    <string name="dokter">Dokter</string>
    <string name="bidan">Bidan</string>
    <string name="spontan">Spontan</string>
    <string name="vakum">Vakum</string>
    <string name="gram">gram</string>
    <string name="cm">cm</string>
    <string name="hb_o">Hb O</string>
    <string name="bcg">BCG</string>
    <string name="ya">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="sudah">Sudah</string>
    <string name="belum">Belum</string>
    <string name="nifas_0_3">Nifas hari ke 0-3</string>
    <string name="nifas_4_7">Nifas hari ke 4-7</string>
    <string name="nifas_15_42">Nifas hari ke 15-42</string>
    <string name="amis">Amis</string>
    <string name="busuk">Busuk</string>
    <string name="SC">SC</string>
    <string name="asi_tidak_lancar">ASI tidak lancar</string>
    <string name="putingsusulecet">Puting susu lecet</string>
    <string name="putingmasukdlm">Puting susu masuk ke dalam</string>
    <string name="sudahlancar">Sudah lancar</string>
    <string name="belumlancar">Belum lancar</string>
    <string name="tdkdptisti">Tidak dapat istirahat</string>
    <string name="ckpisti">Cukup istirahat</string>
    <string name="sdhkng">Sudah mulai kekuningan</string>
    <string name="mrhdrh">Berwarna merah darah</string>
    <string name="keputihan">Keputihan</string>
    <string name="merah">Merah</string>
    <string name="lancar">Lancar</string>
    <string name="tdklancar">Tidak keluar</string>
    <string name="sembelit">Sembelit/konstipasi</string>
    <string name="tdklncr">Tidak lancar</string>
    <string name="nyerimin">Nyeri minimal</string>
    <string name="nyerihbt">Nyeri hebat</string>
    <string name="kngkeputihan">Kuning keputihan</string>
    <string name="kejang">Kejang</string>
    <string name="demam">Demam</string>
    <string name="bayi_malas_gerak">Bayi malas gerak</string>
    <string name="bayi_lupa_nafas">Bayi lupa nafas</string>
    <string name="bayi_susah_netek">Bayi susah netek</string>
    <string name="bayi_kuning">Bayi kuning</string>
    <string name="_24_jam_setelah_lahir"><![CDATA[<24 jam setelah lahir]]></string>
    <string name="_14_hari"><![CDATA[>14 hari]]></string>
    <string name="batuk_pilek">Batuk pilek</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="nama">Nama</string>
    <string name="alamat">Alamat</string>
    <string name="agama">Agama</string>
    <string name="nomor_hp">Nomor HP</string>
    <string name="nik">NIK</string>
    <string name="pekerjaan">Pekerjaan</string>
    <string name="pendidikan_terakhir">Pendidikan Terakhir</string>
    <string-array name="agama">
        <item>Islam</item>
        <item>Katolik</item>
        <item>Kristen</item>
        <item>Hindu</item>
        <item>Budha</item>
        <item>Lainnya</item>
    </string-array>
    <string-array name="pendidikan">
        <item>SD</item>
        <item>SMP</item>
        <item>SMA</item>
        <item>D1</item>
        <item>D3</item>
        <item>D4</item>
        <item>S1</item>
        <item>S2</item>
        <item>S3</item>
    </string-array>
</resources>
