<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".ibuMelahirkanActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tglLhr"
        android:layout_width="372dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="Tanggal ibu melahirkan:"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="15dp"
        android:hint="dd/mm/yyyy"
        android:inputType="date"></EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="Dimana ibu melahirkan?"
        android:textStyle="bold" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/tmptlahir">

        <RadioButton
            android:id="@+id/radioRS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rumah_sakit" />

        <RadioButton
            android:id="@+id/radiopuskesmas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/puskesmas" />

        <RadioButton
            android:id="@+id/radioklinik"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/klinik" />

        <RadioButton
            android:id="@+id/radiolainnya"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lainnya">
        </RadioButton>
        <EditText
            android:id="@+id/lainnya"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:visibility="gone" />
    </RadioGroup>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Penolong persalinan:"
        android:textStyle="bold"
        android:layout_margin="10dp"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp">
        <RadioButton
            android:id="@+id/radiodokter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dokter"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radiobidan"
            android:text="@string/bidan"/>
    </RadioGroup>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="Jenis persalinan:"
        android:textStyle="bold"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="10dp">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radiospontan"
            android:text="@string/spontan"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioSC"
            android:text="SC"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radiovakum"
            android:text="@string/vakum"/>
    </RadioGroup>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="DATA BAYI"
        android:textStyle="bold"
        android:layout_margin="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="Jenis Kelamin:"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Laki-laki"
                android:id="@+id/radiolaki"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioperempuan"
                android:text="Perempuan"
                android:layout_marginLeft="10dp"/>
        </RadioGroup>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Berat badan bayi:"
        android:layout_margin="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="10dp">
        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/edtberat"
            android:inputType="numberDecimal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/gram"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="Panjang bayi:"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="10dp">
        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/edtpanjang"
            android:inputType="numberDecimal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/cm"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Imunisasi yang telah didapat saat lahir di RS/Puskesman:"
        android:layout_margin="10dp"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkhbo"
        android:text="@string/hb_o"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkbcg"
        android:text="@string/bcg"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/submitlhr"
        android:layout_marginTop="15dp"
        android:text="SUBMIT"
        android:textAlignment="gravity"
        android:background="@drawable/rounded_text_editor_pink"/>

</LinearLayout>
</ScrollView>