<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7ebf4"
    tools:context=".HomeActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/dap"
        android:layout_marginTop="50dp"
        app:civ_border_color="#fff"
        app:civ_border_width="2dp" />



    <TextView
        android:id="@+id/textNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_image"
        android:layout_marginTop="20dp"
        android:paddingStart="12dp"
        android:text="@string/nama"
        android:textColor="@color/colorTextView"/>

    <TextView
        android:id="@+id/textNama1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textNama"
        android:layout_marginTop="10dp"
        android:paddingStart="12dp"
        android:textColor="@color/colorTextView2"
        android:text="@string/nama"
        />


    <TextView
        android:id="@+id/textAlm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textNama1"
        android:layout_marginTop="20dp"
        android:paddingStart="12dp"
        android:text="@string/alamat"
        android:textColor="@color/colorTextView"/>

    <TextView
        android:id="@+id/textAlm1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textAlm"
        android:layout_marginTop="10dp"
        android:paddingStart="12dp"
        android:textColor="@color/colorTextView2"
        android:text="@string/alamat"/>

    <TextView
        android:id="@+id/textAgm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textAlm1"
        android:layout_marginTop="20dp"
        android:paddingStart="12dp"
        android:text="@string/agama"
        android:textColor="@color/colorTextView"/>

    <TextView
        android:id="@+id/textAgm1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textAgm"
        android:layout_marginTop="10dp"
        android:paddingStart="12dp"
        android:textColor="@color/colorTextView2"
        android:text="@string/agama"/>

    <TextView
        android:id="@+id/textHP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textAgm1"
        android:layout_marginTop="20dp"
        android:paddingStart="12dp"
        android:text="@string/nomor_hp"
        android:textColor="@color/colorTextView"/>

    <TextView
        android:id="@+id/textHP1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textHP"
        android:layout_marginTop="10dp"
        android:paddingStart="12dp"
        android:textColor="@color/colorTextView2"
        android:text="@string/nomor_hp"/>

    <TextView
        android:id="@+id/textPendTer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textHP1"
        android:layout_marginTop="20dp"
        android:paddingStart="12dp"
        android:text="@string/pendidikan_terakhir"
        android:textColor="@color/colorTextView"/>

    <TextView
        android:id="@+id/textPendTer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textPendTer"
        android:layout_marginTop="10dp"
        android:paddingStart="12dp"
        android:textColor="@color/colorTextView2"
        android:text="@string/pendidikan_terakhir"/>

    <TextView
        android:id="@+id/textPk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textPendTer1"
        android:layout_marginTop="20dp"
        android:paddingStart="12dp"
        android:text="@string/pekerjaan"
        android:textColor="@color/colorTextView"/>

    <TextView
        android:id="@+id/textPk1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textPk"
        android:layout_marginTop="10dp"
        android:paddingStart="12dp"
        android:textColor="@color/colorTextView2"
        android:text="@string/pekerjaan"/>


</RelativeLayout>
